--- a/.classpath
+++ b/.classpath
@@ -4,10 +4,14 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="config"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="lib/spring-beans-5.1.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-beans-5.1.3.RELEASE.jar" sourcepath="C:/Users/Administrator/.m2/repository/org/springframework/spring-beans/5.1.3.RELEASE/spring-beans-5.1.3.RELEASE-sources.jar"/>
 	<classpathentry kind="lib" path="lib/spring-context-5.1.3.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring-core-5.1.3.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring-expression-5.1.3.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/c3p0-0.9.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.47.jar"/>
+	<classpathentry kind="lib" path="lib/spring-aop-5.1.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-test-5.1.3.RELEASE.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
