--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,9 @@
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.47.jar"/>
 	<classpathentry kind="lib" path="lib/spring-aop-5.1.3.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring-test-5.1.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/aopalliance-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/aspectjweaver-1.9.2.jar"/>
+	<classpathentry kind="lib" path="lib/cglib-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/spring-aspects-5.1.3.RELEASE.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
