--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,8 @@
 	<classpathentry kind="lib" path="lib/aspectjweaver-1.9.2.jar"/>
 	<classpathentry kind="lib" path="lib/cglib-3.1.jar"/>
 	<classpathentry kind="lib" path="lib/spring-aspects-5.1.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-jdbc-5.1.3.RELEASE.jar" sourcepath="C:/Users/Administrator/.m2/repository/org/springframework/spring-jdbc/5.1.3.RELEASE/spring-jdbc-5.1.3.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="lib/spring-orm-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/spring-tx-5.1.3.RELEASE.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
