--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="src" path="config"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/spring-beans-5.1.3.RELEASE.jar" sourcepath="C:/Users/Administrator/.m2/repository/org/springframework/spring-beans/5.1.3.RELEASE/spring-beans-5.1.3.RELEASE-sources.jar"/>
-	<classpathentry kind="lib" path="lib/spring-context-5.1.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-context-5.1.3.RELEASE.jar" sourcepath="C:/Users/Administrator/.m2/repository/org/springframework/spring-context/5.1.3.RELEASE/spring-context-5.1.3.RELEASE-sources.jar"/>
 	<classpathentry kind="lib" path="lib/spring-core-5.1.3.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring-expression-5.1.3.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
@@ -19,6 +19,6 @@
 	<classpathentry kind="lib" path="lib/spring-aspects-5.1.3.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring-jdbc-5.1.3.RELEASE.jar" sourcepath="C:/Users/Administrator/.m2/repository/org/springframework/spring-jdbc/5.1.3.RELEASE/spring-jdbc-5.1.3.RELEASE-sources.jar"/>
 	<classpathentry kind="lib" path="lib/spring-orm-1.1.3.jar"/>
-	<classpathentry kind="lib" path="lib/spring-tx-5.1.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-tx-5.1.3.RELEASE.jar" sourcepath="C:/Users/Administrator/.m2/repository/org/springframework/spring-tx/5.1.3.RELEASE/spring-tx-5.1.3.RELEASE-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
